# MRI_ai

./: .gitignore  README.md
.github/workflows/: ci.yml
ai_recon/: README.md  requirements.txt
ai_recon/scripts/: baseline_report.py  check_onnx_parity.py  evaluate_raw_output.py  export_onnx.py  make_recon_visualization.py  make_synthetic_tensor.py  train_fastmri_unet.py  train_unet.py
ai_recon/src/mri_recon/: __init__.py  masks.py  (+7 more)
cpp_inference/: CMakeLists.txt  README.md
cpp_inference/include/mri/: inference_engine.hpp
cpp_inference/src/: inference_engine.cpp  main.cpp  tensorrt_backend.cpp
docs/: architecture.md  cloud_training_fastmri.md  dataset.md  jetson_handoff.md  local_development.md  stm32_gpio_logic_capture.md  stm32f407_bringup.md  study_guide_zh.md  technical_walkthrough_zh.md  week1_log.md
docs/assets/: stm32_gpio_logic_capture_pa9_pd5_pa11.kvdat
docs/performance/: README.md  baseline_local.md  fastmri_v1_eval.md  fastmri_v1_jetson_benchmark.md  jetson_benchmark.md  stm32_gpio_logic_capture.md  stm32_sequence_bridge.md  synthetic_tensor_eval.md  synthetic_tensor_eval_v2.md  trtexec_fp16_times.json
firmware/: README.md
firmware/sequences/: spin_echo_demo.json
firmware/zephyr_app/: CMakeLists.txt  prj.conf
tests/: test_dicom_optional.py  test_fastmri_training_dataset.py  test_masks.py  test_metrics.py  test_reconstruction.py  test_stm32_sequence_client.py
tools/: build_cpp_gcc.ps1  build_cpp_jetson.sh  build_zephyr_stm32f407.ps1  run_local_checks.ps1  smoke_check.py  stm32_sequence_client.py  stm32_uart_smoke.py  validate_sequence.py
(+4 files in other folders)
